# trading

./: functions.py  main.py  main2.py  pyproject.toml  test.py
scripts/: readable_csv.py
